--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
   google_fonts: ^3.0.1
   get: ^4.6.5
+  video_player: ^2.4.7
+  bordered_text: ^2.0.0
 
 dev_dependencies:
   flutter_test:
