--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,17 +15,30 @@ dependencies:
   get: ^4.6.5
   video_player: ^2.4.7
   bordered_text: ^2.0.0
+  dartz: ^0.10.1
+  equatable: ^2.0.5
+  freezed_annotation: ^2.2.0
+  get_it: ^7.2.0
+  injectable: ^1.5.3
+  json_annotation: ^4.7.0
+  http: ^0.13.5
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
+  build_runner: ^2.3.2
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  freezed: ^2.2.0
+  injectable_generator: ^1.5.4
+  json_serializable: ^6.5.3
+  mockito: ^5.3.2
 
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # fonts:
