--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   json_annotation: ^4.7.0
   http: ^0.13.5
   flutter_bloc: ^8.1.1
+  share_plus: ^6.0.1
 
 dev_dependencies:
   build_runner: ^2.3.2
