--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   http: ^0.13.5
   flutter_bloc: ^8.1.1
   share_plus: ^6.0.1
+  intl: ^0.17.0
 
 dev_dependencies:
   build_runner: ^2.3.2
