--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dev_dependencies:
   injectable_generator: ^1.5.4
   json_serializable: ^6.5.3
   mockito: ^5.3.2
+  flutter_launcher_icons: ^0.10.0
+
+flutter_icons:
+  android: "launcher_icon"
+  image_path: "assets/images/Netflix_logo.png"
+  min_sdk_android: 21
 
 flutter:
   uses-material-design: true
